# doctrine

./: .envrc.example  .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  clippy.toml  doctrine.toml  eslint.config.js  flake.nix  install.sh  justfile  lazyspec-research-spec.md  skills-lock.json  todo.md
.claude-plugin/: marketplace.json
.doctrine/: governance.md
.github/workflows/: release.yml
.spec-driver/run/: events.jsonl
crates/cordage/: Cargo.toml  README.md
crates/cordage/examples/: scale_harness.rs
crates/cordage/src/: lib.rs  query.rs  resolve.rs
crates/cordage/tests/: adjacency.rs  build_validation.rs  channels.rs  condensation_fold.rs  construction.rs  denylist.rs  explain.rs  golden_net.rs  ordering.rs  reachability.rs  resolution.rs  scale_cliffs.rs
doc/: drift-spec.md  entity-model.md  glossary.md  install-spec.md  memory-spec.md  relation-index.md  reservation-spec.md  skills-spec.md  slices-spec.md  spec-entity-spec.md
doc/memories/: customizable-governance-surface.md  doctrine-just-module.md  engine-identity-and-claim-seam.md  forgettable-event-store-backend-contract.md
docs/claude/: fetch.sh
examples/: bm25_probe.rs
install/: boot-footer.md  doctrine.just  doctrine.toml.example  glossary.md  governance.md  manifest.toml  review-ledger.md  routing-process.md  using-doctrine.md
install/templates/: adr.toml  backlog-risk.toml  backlog.toml  design.md  knowledge-assumption.toml  knowledge-constraint.toml  knowledge-decision.toml  knowledge-question.toml  memory.toml  plan.md  plan.toml  policy.toml  requirement.toml  revision.toml  rfc.toml  seed-onboarding.md  slice.md  slice.toml  spec-product.md  spec-product.toml  spec-tech.md  spec-tech.toml  standard.toml
install/x/: about.md
memory/: mem.concept.doctrine.boot-snapshot  mem.concept.doctrine.entity-engine  mem.concept.doctrine.memory-model  mem.concept.doctrine.reading-entities  mem.concept.doctrine.routing-gate  mem.concept.doctrine.storage-model  mem.fact.doctrine.cli-source-of-truth  mem.fact.doctrine.storage-tiers  mem.pattern.doctrine.close-drift-discharge-rec  mem.pattern.doctrine.conventions  mem.pattern.doctrine.core-loop  mem.pattern.doctrine.tdd-loop  mem.signpost.doctrine.adrs  mem.signpost.doctrine.audit  mem.signpost.doctrine.backlog  mem.signpost.doctrine.cli-command-map  mem.signpost.doctrine.file-map  mem.signpost.doctrine.install  mem.signpost.doctrine.knowledge  mem.signpost.doctrine.lifecycle-start  mem.signpost.doctrine.overview  mem.signpost.doctrine.policies-standards  mem.signpost.doctrine.recording-memories  mem.signpost.doctrine.reference-docs  mem.signpost.doctrine.relating-entities  mem.signpost.doctrine.requirements  mem.signpost.doctrine.review  mem.signpost.doctrine.revisions  mem.signpost.doctrine.skill-map  mem.signpost.doctrine.specs
memory/mem.concept.backlog.work-intake-membership/: memory.md  memory.toml
memory/mem.signpost.doctrine.concept-map/: memory.md  memory.toml
plugins/: LICENSE  marketplace.json
proposals/: 0001-dedup-iss025-iss027.md  0002-spec003-stale-container-refs.md  0003-transitive-impact-query-on-relation-graph.md  0004-kind-owns-id-to-path-mapping.md  0005-spec018-no-requirement-spine.md  0006-concept-map-bridge-to-relation-graph.md  0007-graph-interchange-export-format.md  0008-spec-altitude-validation-cluster.md  0009-authored-priority-slot-unbuilt.md  0010-adr001-layering-baseline-no-burndown.md  0011-unified-corpus-health-doctor.md  0012-spec001-spec002-detached-from-c4-tree.md  0013-spec005-stale-supersession-storage.md  0014-thesis-graph-value-is-gated-on-consumption-surfaces.md  0015-imp056-coverage-status-formatter-scope.md  0016-prd005-leasing-overpromises-vs-shipped.md  0017-worktree-gc-bulk-sweep.md  0018-sl121-imp075-integrate-rework-coordination.md  0019-requirement-acceptance-criteria-uneven.md  0020-skills-absent-from-boot-routing-snapshot.md  0021-review-queue-triage-guide.md  0022-mcp-surface-is-review-only-no-read-tools.md  0023-std-kind-undogfooded.md  0024-empty-boot-governance-sections.md  0025-imp081-done-but-open.md  0026-done-but-open-detector.md  0027-requirement-verification-basis-fragmented.md  0028-inspect-renders-bare-ids-no-titles.md  0029-prose-citation-integrity-reactive-only.md  0030-SUMMARY.md
scripts/: install-test.sh  pi-respawn-nofork.sh  pi-spawn-confined.sh  pi-spawn.sh  refresh-readme-index.sh  smoke.sh
slice/095/: design.md
src/: adr.rs  backlog.rs  backlog_order.rs  boot.rs  boundary.rs  clock.rs  concept_map.rs  conduct.rs  conformance.rs  contentset.rs  corpus.rs  corpus_guard.rs  coverage.rs  coverage_scan.rs  coverage_store.rs  coverage_verify.rs  coverage_view.rs  dep_seq.rs  dispatch.rs  dispatch_config.rs  doctor_checks.rs  dtoml.rs  entity.rs  estimate.rs  facet.rs  facet_write.rs  finding.rs  fsutil.rs  git.rs  globmatch.rs  governance.rs  hymns.rs  input.rs  install.rs  install_config.rs  integrity.rs  kinds.rs  knowledge.rs  lazyspec.rs  ledger.rs  (+43 more)
templates/: mcp.ts
tests/: architecture_layering.rs  bm25_probe.rs  e2e_adr_cli_golden.rs  e2e_backlog_filter_alias.rs  e2e_backlog_list_order_golden.rs  e2e_backlog_order_golden.rs  e2e_boot_map_golden.rs  e2e_catalog_cli.rs  e2e_check_proxy.rs  e2e_check_regression.rs  e2e_claude_install.rs  e2e_coverage_authored_residency.rs  e2e_coverage_record_golden.rs  e2e_coverage_view_golden.rs  e2e_dep_seq_verbs.rs  e2e_dispatch_arm_spawn.rs  e2e_dispatch_candidate.rs  e2e_dispatch_h1_integration.rs  e2e_dispatch_lifecycle.rs  e2e_dispatch_sync.rs  e2e_dispatch_verify_vt.rs  e2e_doctor_golden.rs  e2e_estimate_non_blocking.rs  e2e_help_families_golden.rs  e2e_inspect_golden.rs  e2e_inspect_transitive_golden.rs  e2e_integrity.rs  e2e_knowledge_cli_golden.rs  e2e_knowledge_install_commit.rs  e2e_link_unlink.rs  e2e_list_columns_golden.rs  e2e_list_conformance.rs  e2e_mcp_server.rs  e2e_memory_anchoring.rs  e2e_memory_new_alias.rs  e2e_memory_record_worktree.rs  e2e_memory_sync.rs  e2e_memory_validate_golden.rs  e2e_no_baked_manifest_dir.rs  e2e_no_baked_paths.rs  (+38 more)
(+4450 files in other folders)
